--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PR'
 - !lcsh 'Dickens, Charles, 1812-1870 -- Criticism and interpretation'
+- GITenberg
 title: Appreciations and Criticisms of the Works of Charles Dickens
 url: http://www.gutenberg.org/ebooks/22362
